# scratchstack-wrapper-aws-c-io

./: Cargo.toml  README.md  build.rs
src/: lib.rs  sync_ptr.rs  tests.rs
